hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_reuse_lval_3.php
<?hh

async function f() {
  concurrent {
    await genx(ref_fun(&$x));
    await genx($x);
  }
}
